--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,6 @@
 [tox]
-envlist = py36, py37, py38, flake8
+envlist = py37, py38, flake8
 
-[travis]
-python =
-    3.8: py38
-    3.7: py37
-    3.6: py36
 
 [testenv:flake8]
 basepython = python
@@ -16,4 +11,4 @@ commands = flake8 oasis_stat tests
 setenv =
     PYTHONPATH = {toxinidir}
 
-commands = python setup.py test
+commands = 
