--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,12 +1,12 @@
-pip==19.2.3
-bump2version==0.5.11
-wheel==0.33.6
-watchdog==2.0.0
-tox==3.14.0
-coverage==4.5.4
-Sphinx==7.2.6
-twine==5.0.0
-ruff==0.3.5
+pip>=23.3
+bump2version>=0.5.11
+wheel>=0.38.1
+watchdog>=2.0.0
+tox>=3.14.0
+coverage>=4.5.4
+Sphinx>=7.2.6
+twine>=5.0.0
+ruff>=0.3.5
 numpy>=1.23
 scipy>=1.10
 oasis_stat
